[tool.poetry]
name = "ungoliant"
version = "0.1.0"
description = "Unofficial CLI tool to display power outages in Perth"
authors = ["Grahame Bowland <grahame@oreamnos.com.au>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ungoliant = 'ungoliant.cli:main'
