[project]
name = "ungoliant"
version = "0.1.2"
description = "Unofficial CLI tool to display power outages in Perth"
authors = [{ name = "Grahame Bowland", email = "grahame@oreamnos.com.au" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = ["requests>=2.32.3,<3"]

[project.scripts]
ungoliant = "ungoliant.cli:main"

[dependency-groups]
dev = ["black>=25.1.0,<26"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
